k8s-php-app/generated.yaml
---
# Source: k8s-php-app/templates/service-web.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: slates
    role: web
  name: slates
  namespace: api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-main
  selector:
    app: slates
    role: web
  type: NodePort
---
# Source: k8s-php-app/templates/deployment-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: slates
  namespace: api
  labels:
    app: slates
    role: web
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: slates
      role: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: slates
        role: web
    spec:
      containers:
      - name: app
        image: "airslate/slates-api:v11.0.3"
        imagePullPolicy: Always
        ports:
        - name: http-main
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /status
            port: 80
            scheme: HTTP
          failureThreshold: 60
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /status
            port: 80
            scheme: HTTP
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 2
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /app/storage/logs/json
          name: logs-app
          subPathExpr: $(NAMESPACE_NAME)_$(POD_NAME)
        - mountPath: /var/log/nginx
          name: logs-nginx
          subPathExpr: $(NAMESPACE_NAME)_$(POD_NAME)
      imagePullSecrets:
      - name: docker-auth
      volumes:
      - hostPath:
          path: /var/log/k8s/apps/app_json
          type: ""
        name: logs-app
      - hostPath:
          path: /var/log/k8s/apps/nginx
          type: ""
        name: logs-nginx
---
# Source: k8s-php-app/templates/virtualservice-web.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  labels:
    app: slates
    role: web
  name: slates
  namespace: api
spec:
  gateways:
  - mesh
  - infra-istio/main-ingress-gateway
  hosts:
  - slates.api.svc.cluster.local
  - api-slates.as-stage-k8s.int
  http:
  - route:
    - destination:
        host: slates.api.svc.cluster.local
